# fty-proto

./: .clang-format  .dependencies-graph.dot.part  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  license.xml  project.xml
api/: fty_proto.api
bindings/lua_ffi/: fty_proto_ffi.lua
bmsg/: CMakeLists.txt
bmsg/src/: bmsg.c  bmsg.cpp
builds/check_zproject/: ci_build.sh
builds/check_zproto/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  bios_proto.txt  biosproto.txt  bmsg.txt  fty-proto.txt  fty_proto.txt  ftyproto.txt  libbiosproto.txt  libftyproto.txt  mkman
include/: Makefile.am  bios_proto.h  biosproto.h  biosproto_library.h  fty_proto.h  fty_proto_library.h  ftyproto.h  ftyproto_library.h
lib/: CMakeLists.txt
obs/: debian.control  debian.copyright  debian.rules  libbiosproto-dev.install  libbiosproto.dsc  libbiosproto.install  libbiosproto.spec  libftyproto-dev.install  libftyproto.dsc  libftyproto.install  libftyproto.spec
src/: .gitignore  Makemodule.am  bios_proto.bnf  bios_proto.c  bios_proto.xml  biosproto_classes.h  biosproto_selftest.c  bmsg.c  fty_proto.bnf  fty_proto.c  fty_proto.xml  fty_proto_classes.h  fty_proto_private_selftest.c  fty_proto_selftest.c  ftyproto_classes.h  ftyproto_selftest.c  generate_metric.c  get_metrics.c  libbiosproto.pc.in  libbiosproto.sym  libfty_proto.pc.in  libftyproto.pc.in  s.sh  selftest  selftest.c  selftest.h
zproject-hold/: fty_proto.bnf  fty_proto.xml  generate.sh
(+34 files in other folders)
